--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,11 @@
             <artifactId>lucene-analyzers-common</artifactId>
             <version>5.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>5.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
