--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>Beau</groupId>
     <artifactId>Beau</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>redis</module>
+    </modules>
+    <packaging>pom</packaging>
     <properties>
         <aspectj-version>1.7.3</aspectj-version>
         <spring-version>4.0.3.RELEASE</spring-version>
