--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -15,5 +15,12 @@
     <properties>
         <project_encoding>UTF-8</project_encoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+    </dependencies>
 
 </project>
