--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -22,5 +22,40 @@
             <version>2.7.3</version>
         </dependency>
     </dependencies>
+    
+    <build>
+        <!--生效需要下面的配置-->
+        <filters>
+            <filter>src/main/filter/dev-filter.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!--使上面的配置项生效的配置-->
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.0.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.0</version>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
